updated .env example & config.json.example

--- a/config.json.example
+++ b/config.json.example
@@ -22,7 +22,7 @@
     "jsonByAction": [
       {
         "action": "close",
-        "json": "testdev close json"
+        "json": "{\"payload\":\"testdev close json\"}"
       }
     ]
   }
