fixed queue polling, moved redis connection creation from rsmq (options pass problem), added option to stop app on redis failure, failures shown in log, redis host/port from env

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ IOT_FALLBACK_JSON='{"device_address":"{device_address}", "action_name":"{action_
 # method used for request
 IOT_METHOD='POST'
 
+# ## Redis
+REDIS_SERVICE_HOST="127.0.0.1"
+REDIS_PORT="6379"
+
 # ## Tracing, disabled when not specified
 # TRACE=http://localhost:55681/v1/traces
 
