--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,22 @@
-# ## IOT - advanced configuration (per action) available in config.json
-# X-API-KEY
-IOT_PLATFORM_TOKEN=''
+# ## IOT
+# advanced configuration (per action) available in config.json (see readme.md)
+IOT_PLATFORM_TOKEN=""
 # platform url, variables available: device_address, action_name, key_id, function_name, device_model
 IOT_PLATFORM_URL=''
+# method used for request
+IOT_METHOD='POST'
 # json body of optional fallback request (when device model not specified or not supported, comment out to disable)
 # variables available: device_address, action_name, key_id, function_name, device_model. Usage: "{action_name}" is changed to eg "open"
 IOT_FALLBACK_JSON='{"device_address":"{device_address}", "action_name":"{action_name}", "key_id":"{key_id}", "function_name":"{function_name}", "device_model":"{device_model}"}'
-# method used for request
-IOT_METHOD='POST'
 
 # ## Redis
-REDIS_SERVICE_HOST="127.0.0.1"
+REDIS_HOST="localhost"
 REDIS_PORT="6379"
 
-# ## Tracing, disabled when not specified
+# ## Other
+# # debug output, comment to disable
+DEBUG=true
+# # port for optional http server (required by some hosts)
+# PORT="8081"
+# # Url for tracing
 # TRACE=http://localhost:55681/v1/traces
-
-# ## Debug output, comment to disable
-# DEBUG=true
