--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/lodash.sample": "^4.2.6",
+    "@types/redis": "^2.8.32",
     "jest": "^26.6.3",
     "lodash.sample": "^4.2.1",
     "skey-lib": "smartkeyplatform/SmartKey-Libs",
